desktop-pwas: Open in Chrome when an app immediately redirects to an out-of-scope URL

When an app launches and immediately redirects to an out-of-scope URL,
continue the navigation in a regular Chrome window.

Bug: 787374
Change-Id: I9ecd74ac06b398c19bb9d98317d37804b7576c15