chrome/browser/extensions/bookmark_app_navigation_throttle.h
@@ -40,7 +40,8 @@ class BookmarkAppNavigationThrottle : public content::NavigationThrottle {
  private:
   // Decides if the navigation should be opened in a new tab, in a new App
   // Window, or if the navigation should continue normally.
-  content::NavigationThrottle::ThrottleCheckResult ProcessNavigation();
+  content::NavigationThrottle::ThrottleCheckResult ProcessNavigation(
+      bool is_redirect);
 
   // Opens the current target url in an App window. May post a task to do so if
   // opening the app synchronously could result in the app opening in the
